# agentic-rag-server

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile_1  README.md  build.sh  parent_child_index_from_json.py  parent_child_index_from_md.py  parent_child_index_from_other.py  pyproject.toml  requirement_customer.txt  requirements.txt  start.sh
app/: __init__.py  main.py
app/api/: __init__.py  router.py
app/api/routes/: health_route.py  index_route.py  operator_route.py  questions_answers_route.py  retrieval_route.py
app/api/schemas/: __init__.py  operator.py  retrieval.py
app/service/: README.md  __init__.py  index_service.py  md_to_json.py  operator_service.py  retrieval_service.py
app/service/rag/: QA.json  RAG_flow.py  RAG_test.py
app/service/test/: QA.json  RAG_flow.py  RAG_test.py
doc/: API_DOCUMENTATION.md  base_rag_README.md
